WiUDA-chart/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
  namespace: lazorko-czekalski
  labels:
    app: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: ghcr.io/adamuspl/wiuda-front-end:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ghcr-creds
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: front-end
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
