WiUDA-chart/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: front-end-route
  namespace: lazorko-czekalski
spec:
  parentRefs:
    - name: wuda-ext  
      namespace: gateway-api
      sectionName: https
  hostnames:
    - xololt.wuda.vizards.it
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: front-end-service
          port: 8000
